MVP 3, 4, Release 1 versions

--- a/src/views/docs/TermsView/Content.mdx
+++ b/src/views/docs/TermsView/Content.mdx
@@ -1,5 +1,4 @@
-TERMS AND CONDITIONS
-=============================
+# TERMS AND CONDITIONS
 
 This page contains the "Terms and Conditions" under which you may use
 Dankstocks.com. Please read this page carefully. If you do not accept
@@ -83,8 +82,6 @@ You are also expected to follow all laws and regulations that may be
 associated with any of the activities involved with the use of the Web
 Site. You are also expected to pay for any state fees or applicable
 taxes that may be associated with the activities from this Web Site.
-
- 
 
 **Specific Prohibited Uses.**
 
@@ -171,13 +168,23 @@ currently involved in unethical, immoral or illegal activity. Your sole
 remedy in these cases will be a pro rata refund of your membership, if
 there is a membership fee. In the event that we cancel your access, we
 may attempt to notify you by contacting the e-mail and/or billing
-address/phone number provided at the time the access was created. 
+address/phone number provided at the time the access was created.
 
 You agree to provide current, complete and accurate account information
 for all membership, program or donations activity. You agree to promptly
 update your account and other information, including your email address
 and credit card numbers and expiration dates, so that we can complete
-your transactions and contact you as needed.  
+your transactions and contact you as needed.
+
+You will only be compensated by us for the first two approved articles
+that you submit to us. Compensation may be extended past your first two
+approved articles in the case that we offer promotions regarding article
+compensation. Compensation rates are subject to change without notice
+and for any reason.
+
+We will take a 20% platform fee from all tip transactions.
+This fee may be changed at any time. Certain promotions may change
+the fee temporarily.
 
 Dankstocks.com will not discriminate, and prohibits discrimination,
 harassment, and bullying against any person for any reason—for example,
@@ -296,9 +303,7 @@ will do so anomalously, unless stated otherwise.
 Any hyperlinks contained in any postings will be, at the discretion of
 the Company, disabled for use by others.
 
- 
-
-** **
+\*\* \*\*
 
 **Registration and Password.**
 
@@ -460,8 +465,6 @@ the content or accuracy of materials on such third party web sites. If
 you decide to access linked third party Web sites, you do so at your own
 risk.
 
-  
-
 We may provide you with access to third-party tools over which we
 neither monitor nor have any control nor input. You acknowledge and
 agree that we provide access to such tools ”as is” and “as available”
@@ -483,8 +486,6 @@ Service.
 You agree not to resell or assign your rights or obligations under these
 Terms of Use. You also agree not to make any unauthorized commercial use
 of the Web Site.
-
- 
 
 **Termination.**
 
